2006-04-27  Sergii Stoian <stoyan255@yahoo.com>

	* Source/NSMenuView.m (-rectOfItemAtIndex:): Delete origin.x fiddling 
	code because it's not correct. The code wich draws heavy line have to
	update _leftBorderOffset instead.
	(-drawRect:): Always draw dark gray upper and left border.
	
2006-04-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocumentController.m (-makeUntitledDocumentOfType:):
	Set the type of the new document. Patch by Saso Kiselkov
	<diablos@manga.sk>. 

2006-04-19  Adam Fedor  <fedor@gnu.org>

	* configure: Add arg to disable aspell (for use on Mac OS X).
	
	* Source/NSBitmapImageRep+JPEG.m: Add workaround so that INT32
	is not redefined on MingW by jmorecfg.h (Suggestion from Issac
	Trotts).

2006-04-09 12:28 Gregory John Casamento <greg_casamento@yahoo.com>

	* Tools/gopen.m: Streamline gopen code.

2006-04-06  Adam Fedor  <fedor@gnu.org>

	* Tools/gcloseall.m: Include NSProcessInfo.h. Fixes bug #16212.

2006-03-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMenuView.m: ([-rectOfItemAtIndex:]) fixup origin of
	rectangle to avoid overwriting dark line at left of menu.
	* Source/NSMenu.m: make transient main menu shitf on screen.
	fix bug #15935

2006-03-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSMemoryPanel.m: Extend to allow snapshots of the memory
	to be taken so we can compare memory at different points in time.
	Simplify code and fix bug where re-ordering sort in table would
	also change table contents.

2006-03-26  Maurizio Boriani  <baux@gnu.org>

	* Resources/Italian.lproj/Localizable.string: Add missing translations.
	* Resources/Lojban.lproj/Localizable.string: New, lojban strings
	translation.

2006-03-28 20:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* Tools/gopen.m: Added back code in to launch the application properly
	with the -a option.

2006-03-26 12:52 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSPopUpButtonCell.h: Refactored header, 
	added documentation